[project]
name = "homework-agent"
version = "0.1.0"
description = "ReAct Agent s MCP a LangGraph"
requires-python = ">=3.12,<3.14"  
dependencies = [
    "langchain>=0.3.0",           
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.1",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-community>=0.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
